--- a/index.html
+++ b/index.html
@@ -1,33 +1,20 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <title> </title>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script type="text/javascript" src="script.js"></script>
 
 </head>
 
 <body>
-    <SCRIPT language="JavaScript">
-        <!--
-        function look(image) {
-            document.war.src = image;
-        }
-        //-->
-    </SCRIPT>
 
-    <div class="select" ontouchstart="">
-        <FORM>
-            <input type="button" value="シルエット" class="image" onclick="look('img/image.png');">
-            <input type="button" value="体験方法" class="experience" onclick="look('img/experience.png');">
-            <input type="button" value="コンセプト" class="concept" onclick="look('img/concept.png');">
-            <input type="button" value="展開例" class="service" onclick="look('img/service.png');">
-        </FORM>
-    </div>
-
-    <IMG SRC="image.png" class="output" width="100%" height="auto" name="war">
+    <a href="show.html" class="show">
+    <p class="ex">説明ページへ </p>
+    <p class="caution">*画面横向き推奨</p>
+    </a>
 
 </body>
+
 </html>
