--- a/index.html
+++ b/index.html
@@ -2,28 +2,11 @@
 <html lang="ja">
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158175767-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-158175767-1');
-</script>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <title> </title>
 
 </head>
 
 <body>
-
-    <a href="show.html" class="show">
-    <p class="ex">説明ページへ </p>
-    <p class="caution">*画面横向き推奨</p>
-    </a>
-    <a href="tenji.html"></a>
+<p>	It's being adjusted </p>
 </body>
 
 </html>
